--- a/authappcourse/package.json
+++ b/authappcourse/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "formik": "^2.2.9",
     "next": "13.0.7",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
