--- a/authappcourse/package.json
+++ b/authappcourse/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "formik": "^2.2.9",
